--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.1.1",
     "node-fetch": "^3.3.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
